--- a/django/MyApp/templates/index.html
+++ b/django/MyApp/templates/index.html
@@ -22,9 +22,9 @@
                         <td>{{ category.description }}</td>
                         <td>
                             <div class="btn-group" role="group" aria-label="Data Action">
-                                <a class="btn btn-primary" href="{% url 'category-details' category.id %}">Show</a>
-                                <button class="btn btn-secondary">Edit</button>
-                                <button class="btn btn-danger">Delete</button>
+                                <a class="btn btn-primary" href="">Show</a>
+                                <a class="btn btn-secondary">Edit</a>
+                                <a class="btn btn-danger">Delete</a>
                             </div>
                         </td>
                     </tr>
