--- a/django/MyApp/templates/index.html
+++ b/django/MyApp/templates/index.html
@@ -22,7 +22,7 @@
                         <td>{{ category.description }}</td>
                         <td>
                             <div class="btn-group" role="group" aria-label="Data Action">
-                                <a class="btn btn-primary" href="">Show</a>
+                                <a class="btn btn-primary" href="{% url 'show_category' category.id %}">Show</a>
                                 <a class="btn btn-secondary">Edit</a>
                                 <a class="btn btn-danger">Delete</a>
                             </div>
