--- a/django/MyApp/templates/nav.html
+++ b/django/MyApp/templates/nav.html
@@ -23,7 +23,13 @@
                         <li><a class="dropdown-item" href="{%url 'order-list'%}">My Order List</a></li>
                     </ul>
                 </li>
+                <li><span class="nav-item">Hello {{request.user}}</span></li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout'%}">Logout</a>
+                </li>
             </ul>
+
         </div>
+
     </div>
 </nav>
